[package]
name = "pogr_tracing_rs"
version = "0.0.17"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3.18"
reqwest = { version = "0.0.17"] }
tokio = { version = "0.0.17"] }
serde = { version = "0.0.17"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "0.0.17"] }
mockito = "1.2.0"
tokio-test = "0.4"
