[package]
name = "pogr_tracing_rs"
version = "0.0.22"
edition = "2021"
readme = "README.md"
homepage = "https://pogr.io/"
repository = "https://github.com/Pogr-io/pogr_tracing_rs/"
license = "MIT"
keywords = ["gamedev", "analytics", "logging", "statistics"]
categories = ["gamedev", "development-tools", "analytics", "statistics", "logging", "logger", "game", "unreal", "unity", "godot", "tracing", "appender"]
authors = ["Bioblaze Payne", "Randolph William Aarseth II <randolph@pogr.io>"]
rust-version = "1.70"
description = "pogr_tracing_rs is a Crate to allow log collection from the tracing crate, easy and simple."
documentation = "https://docs.rs/pogr_tracing_rs"
include = [
    "**/*.rs",
    "Cargo.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3.18"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
mockito = "1.2.0"
tokio-test = "0.4"
criterion = { version = "0.4.0", features = ["async"] }
